# grader

./: .gitignore
dynamic/: CMakeLists.txt  main.cpp
dynamic/include/: any.hpp  dynamic_macros.hpp  expected.hpp  methods_support.hpp  object.hpp  reflection_types.hpp  register_constructor.hpp  register_creators.hpp  register_methods.hpp  shared_lib.hpp  test_object.hpp
dynamic/src/: any.cpp  methods_support.cpp  object.cpp  register_constructor.cpp  register_creators.cpp  register_methods.cpp  shared_lib.cpp  test_object.cpp
mod_grader/: CMakeLists.txt  debugger.sh
mod_grader/configs/: config.xml  configuration.txt
mod_grader/examples/c/: file_std.xml  std_file.xml
mod_grader/examples/cpp/: std_std.cpp  std_std.xml
mod_grader/html/: test_example.xml  test_file_upload.html
mod_grader/include/: configuration.hpp  free_list_allocator.hpp  grader.hpp  grader_base.hpp  grader_c.hpp  mod_grader.hpp  object.hpp  request_parser.hpp  shared_lib.hpp  subtest.hpp  task.hpp
mod_grader/include/core/: configuration.hpp  daemon.hpp  grader_base.hpp  grader_log.hpp  grader_pool.hpp  interprocess_queue.hpp  log.hpp  logger.hpp  plugin_manager.hpp  shared_memory.hpp  smart_exception.hpp  subtest.hpp  task.hpp  task_queue.hpp
mod_grader/include/daemon/: daemon.hpp
mod_grader/include/plugins/: grader_c.hpp  grader_cpp.hpp  grader_cpp11.hpp  grader_java.hpp  grader_py.hpp
mod_grader/include/utils/: autocall.hpp  grader_log.hpp  interprocess_queue.hpp  pipe_unix.hpp  platform_specific.hpp  process.hpp  process_unix.hpp  safe_process_unix.hpp  shared_lib.hpp
mod_grader/include/utils/dynamic/: dynamic_macros.hpp  object.hpp  register_creators.hpp  shared_lib.hpp
mod_grader/include/utils/network/: tcp_connection.hpp  tcp_server.hpp
mod_grader/include/utils/process/: pipe.hpp  safe_process.hpp  safe_process_unix.hpp
mod_grader/include/web/: grader_interface.hpp  mod_grader.hpp  request_parser.hpp
mod_grader/src/: configuration.cpp  grader.cpp  grader_base.cpp  grader_c.cpp  mod_grader.cpp  request_parser.cpp  subtest.cpp  task.cpp
mod_grader/src/configs/: config.xml
mod_grader/src/core/: configuration.cpp  daemon.cpp  grader_base.cpp  grader_log.cpp  grader_pool.cpp  grader_worker.cpp  log.cpp  logger.cpp  plugin_manager.cpp  shared_memory.cpp  subtest.cpp  task.cpp
mod_grader/src/examples/: cmd_file.xml  file_file.c  file_std.c  std_file.c
mod_grader/src/examples/c/: cmd_file.c  cmd_std.c  cmd_std.xml  compiler_err.c  compiler_err.xml  file_file.xml  std_std.c  std_std.xml  test_memory.c  test_memory.xml  test_timeout.c  test_timeout.xml
mod_grader/src/examples/cpp11/: std_std.cpp  std_std.xml
mod_grader/src/examples/java/: StdStd.java  std_std.xml
mod_grader/src/examples/python/: std_std.py  std_std.xml
mod_grader/src/plugins/: grader_c.cpp  grader_cpp.cpp  grader_cpp11.cpp  grader_java.cpp  grader_py.cpp
mod_grader/src/utils/: grader_log.cpp  object.cpp  pipe.cpp  pipe_unix.cpp  process.cpp  process_unix.cpp  register_creators.cpp  safe_process_unix.cpp  shared_lib.cpp  shared_memory.cpp
mod_grader/src/utils/dynamic/: object.cpp  register_creators.cpp  shared_lib.cpp
mod_grader/src/utils/network/: example.cpp  tcp_connection.cpp  tcp_server.cpp
mod_grader/src/utils/process/: pipe_unix.cpp  process.cpp  process_unix.cpp  safe_process.cpp  safe_process_unix.cpp
mod_grader/src/web/: grader_interface.cpp  grader_php.i  grader_php.php  grader_php_wrap.c  grader_test.php  mod_grader.cpp  php_grader_php.h  request_parser.cpp
reflection/: CMakeLists.txt  main.cpp
reflection/include/: object.hpp  reflection_types.hpp  register_constructor.hpp  register_methods.hpp  register_yourself.hpp  shared_lib.hpp  test_object.hpp
reflection/src/: object.cpp  register_constructor.cpp  register_methods.cpp  register_yourself.cpp  shared_lib.cpp  test_object.cpp
test_dynamic/: CMakeLists.txt  test_methods_support.cpp  test_methods_support.hpp  test_object.cpp  test_object.hpp
test_mod_grader/: CMakeLists.txt  http_tester.cpp  http_tester.hpp  main.cpp  test_configuration.cpp
